# smart-home-automations

./: .gitignore  README.md  main.py  pyproject.toml
integrations/: __init__.py  xiaomi.py  yeelight.py
