[tool.poetry]
name = "smart-home-automations"
version = "0.1.0"
description = "Smart home automations"
authors = ["Santiago Toscanini <toscaninisantiago@gmail.com>"]
readme = "README.md"
packages = [{include = "smart_home_automations"}]

[tool.poetry.dependencies]
python = "^3.11"
yeelight = "^0.7.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
